syntax = 'proto3';

service Get5 {
  // User related
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserReply) {}
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserReply) {}
  rpc EditUser(EditUserRequest) returns (EditUserUserReply) {}
  rpc GetUser(GetUserRequest) returns (GetUserReply) {}
  
  // Team related. CRUD
  
  // Match related. CRUD

  // Map stats realted. CRUD

  // Player related. CRUD

  // Game Server related. CRUD
}